elinks (0.11.3-2) unstable; urgency=low

  * Change Moritz's email ID in Uploaders to jmm@debian.org to be in sync with
    his other packages
  * Correction: Change Vcs-Svn in debian/control to Vcs-Git and VCS-Browser to
    the gitweb URL
  * Pass --disable-leds to configure, it causes a lot of wakeups on laptops
    (Closes: #459467)
  * elinks-lite is Priority: extra (Policy Section 2.5: Priorities -- because
    it conflicts with elinks, elinks-data and elinks-doc)

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Mon, 14 Jan 2008 13:49:33 +0530

elinks (0.11.3-1) unstable; urgency=low

  * Adopted by Y Giridhar Appaji Nag <giridhar@appaji.net> (Closes: #451088)
    + Add Co-maintainer Moritz Muehlenhoff <jmm@inutil.org> to Uploaders
  * Documentation is now built using sources, depends on the features
    configured while building elinks.
  * Remove superfluous m4 and bison Build-Depends.
  * Arch indep part of elinks is large, moved it to elinks-data package
    + Add lintian/linda overrides for elinks.1 man-page (installed by the
      elinks-data package).
  * New upstream release 0.11.3 (Closes: #429311)
    + Don't crash while sorting thru bookmarks (Closes: #315886)
    + German PO file corrections (Closes: #313696)
    + Use off_t for file size in FTP listing (Closes: #403139)
  * Add get-orig-source target that gets orig source and removes debian
    directory, translation files and config.{log,status} etc.
  * Change from DH_COMPAT 4 to debian/compat (5)
  * Move debian/watch file to version 3
  * Bump up Standards-Version to 3.7.3
    + Updated menu files for the latest menu policy.
    + debian/copyright: include all the major authors and copyright holders
      listed in source files.  ELinks is GPL2 only (Closes: #431211)
  * Add Homepage: and Vcs-*: fields to debian/control
  * maint-scripts: Remove debconf dependency and moving of elinks.conf.  Old
    transition code, not necessary anymore.