@@ -3167,3 +3167,12 @@ diff -urNad elinks-0.11.3~/contrib/elinks.conf elinks-0.11.3/contrib/elinks.conf
  
  
    ## protocol.user 
+@@ -2969,7 +2969,7 @@
+     ## ui.leds.enable [0|1]
+     #  Enable LEDs.
+     #  These visual indicators will inform you about various states.
+-    set ui.leds.enable = 1
++    # set ui.leds.enable = 1
+ 
+ 
+   ## ui.sessions 
