@@ -4,12 +4,13 @@ elinks (0.11.3-2) unstable; urgency=low
     his other packages
   * Correction: Change Vcs-Svn in debian/control to Vcs-Git and VCS-Browser to
     the gitweb URL
-  * Pass --disable-leds to configure, it causes a lot of wakeups on laptops
+  * Pass --disable-leds to configure, it causes a lot of wakeups on laptops.
+    Update 06_elinks.conf-parse-error.diff to comment ui.leds.enable option
     (Closes: #459467)
   * elinks-lite is Priority: extra (Policy Section 2.5: Priorities -- because
     it conflicts with elinks, elinks-data and elinks-doc)
 
- -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Mon, 14 Jan 2008 13:49:33 +0530
+ -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Mon, 14 Jan 2008 14:07:04 +0530
 
 elinks (0.11.3-1) unstable; urgency=low
 
